mypy_lint_log.txt
src/selectfilecli/fileBrowser.py: note: In function "tui_file_browser":
src/selectfilecli/fileBrowser.py:124: error: Item "dict[str, str]" of "DirEntry[Any] | dict[str, str]" has no attribute "name"  [union-attr]
                    current_path = os.path.join(current_path, selected_entry.name)
                                                              ^~~~~~~~~~~~~~~~~~~
src/selectfilecli/fileBrowser.py:124: note: See https://mypy.rtfd.io/en/stable/_refs.html#code-union-attr for more info
src/selectfilecli/file_browser_app.py:32: error: Unused "type: ignore" comment  [unused-ignore]
    from textual.screen import ModalScreen  # type: ignore[import]
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
